split batch enqueue/dequeue for thens/priors