@@ -1,13 +1,17 @@
 package net.butfly.albacore.io.faliover;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import com.google.common.util.concurrent.ListenableFuture;
 
 import net.butfly.albacore.io.IO;
 import net.butfly.albacore.io.Message;
@@ -49,17 +53,20 @@ public abstract class FailoverOutput<K, M extends Message<K, ?, M>> extends Outp
 	protected void commit(K key) {}
 
 	@Override
-	public final boolean enqueue(M e) {
-		return enqueue(Stream.of(e)) == 1;
-	}
-
-	@Override
 	public final long enqueue(Stream<M> els) {
-		Map<K, List<M>> map = IO.collect(Streams.of(els), Collectors.groupingBy(e -> e.partition(), Collectors.mapping(t -> t, Collectors
-				.toList())));
-		AtomicLong count = new AtomicLong(0);
-		IO.each(map.entrySet(), e -> count.addAndGet(failover.output(e.getKey(), e.getValue())));
-		return count.get();
+		Iterator<M> it = els.iterator();
+		List<ListenableFuture<Long>> fs = new ArrayList<>();
+		while (it.hasNext()) {
+			List<M> batch = Streams.batch(batchSize, it, null, false);
+			fs.add(IO.listen(() -> {
+				AtomicLong c = new AtomicLong(0);
+				Map<K, List<M>> m = IO.collect(Streams.of(batch), Collectors.groupingBy(e -> e.partition(), Collectors.mapping(t -> t,
+						Collectors.toList())));
+				IO.each(m.entrySet(), e -> c.addAndGet(failover.output(e.getKey(), e.getValue())));
+				return c.get();
+			}));
+		}
+		return IO.sum(fs, logger());
 	}
 
 	@Override
